--- a/frontend/src/styles/colors.css
+++ b/frontend/src/styles/colors.css
@@ -5,7 +5,7 @@
     --navbar-background-color: #222222;
     --navbar-text-color: white;
     --navbar-profile-photo-background-color: #272742;
-    --navbar-profile-photo-border-color: rgb(0, 0, 0);
+    --navbar-profile-photo-border-color: rgb(133, 133, 133);
 
     --sidebar-background-color: #222222;
     --sidebar-box-shadow-color: rgba(0,0,0,0.5);
@@ -63,7 +63,7 @@
     --navbar-background-color: #ffffff;
     --navbar-text-color: black;
     --navbar-profile-photo-background-color: #e0e0e0;
-    --navbar-profile-photo-border-color: #cccccc;
+    --navbar-profile-photo-border-color: #383838;
 
     --sidebar-background-color: #f0f0f0;
     --sidebar-box-shadow-color: rgba(0,0,0,0.1);
@@ -122,7 +122,7 @@
     --navbar-background-color: #222222;
     --navbar-text-color: white;
     --navbar-profile-photo-background-color: #272742;
-    --navbar-profile-photo-border-color: rgb(0, 0, 0);
+    --navbar-profile-photo-border-color: rgb(133, 133, 133);
 
     --sidebar-background-color: #222222;
     --sidebar-box-shadow-color: rgba(0,0,0,0.5);
